// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchScannedHostDetails: fetchScannedHostDetails 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": Object {
              "Portal-Version": Object {
                "AV2-VERSION": "0.1.0",
                "CA-VERSION": "2.23.0.0",
                "CERTVIEW-VERSION": "2.7.0.0-67",
                "CLOUDVIEW-VERSION": "1.11.0.0-1",
                "CM-VERSION": "1.30.0.0",
                "CS-VERSION": "1.6.8.2-23",
                "FIM-VERSION": "2.3.1.0",
                "IOC-VERSION": "3.0.0.0-5",
                "ITAM-VERSION": "1.2.1.1-1",
                "MDS-VERSION": "2.15.7.0",
                "PM-VERSION": "1.4.3.0-289",
                "PS-VERSION": "1.2.1.0-4",
                "PortalApplication-VERSION": "3.1.2.0-2 OFFICIAL #597 (2020-09-15T15:54:59Z)",
                "QGS-VERSION": "1.2.0.0-6",
                "QUESTIONNAIRE-VERSION": "2.23.1.0",
                "QUESTIONNAIRE__V2-VERSION": "1.10.1.0",
                "THREAT__PROTECT-VERSION": "1.2.0.0",
                "UD-VERSION": "0.0.6",
                "VM-VERSION": "1.0.3",
                "WAF-VERSION": "2.12.4.0",
                "WAS-VERSION": "6.13.1.0",
              },
              "QWeb-Version": Object {
                "SCANNER-VERSION": "12.1.67-1",
                "VULNSIGS-VERSION": "2.5.13-2",
                "WEB-VERSION": "10.3.0.3-2",
              },
            },
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": "DAST",
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": "6.13.1.0",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": "vulnerability-management",
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": "1.0.3",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`fetchScannedHostFindings: fetchScannedHostFindings 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": Object {
              "Portal-Version": Object {
                "AV2-VERSION": "0.1.0",
                "CA-VERSION": "2.23.0.0",
                "CERTVIEW-VERSION": "2.7.0.0-67",
                "CLOUDVIEW-VERSION": "1.11.0.0-1",
                "CM-VERSION": "1.30.0.0",
                "CS-VERSION": "1.6.8.2-23",
                "FIM-VERSION": "2.3.1.0",
                "IOC-VERSION": "3.0.0.0-5",
                "ITAM-VERSION": "1.2.1.1-1",
                "MDS-VERSION": "2.15.7.0",
                "PM-VERSION": "1.4.3.0-289",
                "PS-VERSION": "1.2.1.0-4",
                "PortalApplication-VERSION": "3.1.2.0-2 OFFICIAL #597 (2020-09-15T15:54:59Z)",
                "QGS-VERSION": "1.2.0.0-6",
                "QUESTIONNAIRE-VERSION": "2.23.1.0",
                "QUESTIONNAIRE__V2-VERSION": "1.10.1.0",
                "THREAT__PROTECT-VERSION": "1.2.0.0",
                "UD-VERSION": "0.0.6",
                "VM-VERSION": "1.0.3",
                "WAF-VERSION": "2.12.4.0",
                "WAS-VERSION": "6.13.1.0",
              },
              "QWeb-Version": Object {
                "SCANNER-VERSION": "12.1.67-1",
                "VULNSIGS-VERSION": "2.5.13-2",
                "WEB-VERSION": "10.3.0.3-2",
              },
            },
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": "DAST",
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": "6.13.1.0",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": "vulnerability-management",
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": "1.0.3",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;

exports[`steps 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "qualys-account:local-integration-instance",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "portal": Object {
              "Portal-Version": Object {
                "AV2-VERSION": "0.1.0",
                "CA-VERSION": "2.23.0.0",
                "CERTVIEW-VERSION": "2.7.0.0-67",
                "CLOUDVIEW-VERSION": "1.11.0.0-1",
                "CM-VERSION": "1.30.0.0",
                "CS-VERSION": "1.6.8.2-23",
                "FIM-VERSION": "2.3.1.0",
                "IOC-VERSION": "3.0.0.0-5",
                "ITAM-VERSION": "1.2.1.1-1",
                "MDS-VERSION": "2.15.7.0",
                "PM-VERSION": "1.4.3.0-289",
                "PS-VERSION": "1.2.0.0-RELEASE",
                "PortalApplication-VERSION": "3.1.2.0-2 OFFICIAL #597 (2020-09-15T15:54:59Z)",
                "QGS-VERSION": "1.2.0.0-6",
                "QUESTIONNAIRE-VERSION": "2.23.1.0",
                "QUESTIONNAIRE__V2-VERSION": "1.10.1.0",
                "THREAT__PROTECT-VERSION": "1.2.0.0",
                "UD-VERSION": "0.0.6",
                "VM-VERSION": "1.0.3",
                "WAF-VERSION": "2.12.4.0",
                "WAS-VERSION": "6.13.1.0",
              },
              "QWeb-Version": Object {
                "SCANNER-VERSION": "12.1.67-1",
                "VULNSIGS-VERSION": "2.5.4-2",
                "WEB-VERSION": "10.3.0.3-2",
              },
            },
          },
        },
      ],
      "_type": "qualys_account",
      "createdOn": undefined,
      "displayName": "Qualys - Local Integration",
      "name": "Qualys - Local Integration",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:was",
      "_rawData": Array [],
      "_type": "qualys_web_app_scanner",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Automated Web Application Security Assessment and Reporting",
      "displayName": "Qualys Web Application Scanner",
      "function": "DAST",
      "name": "Qualys Web Application Scanner",
      "updatedOn": undefined,
      "version": "6.13.1.0",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "qualys-service:vmdr",
      "_rawData": Array [],
      "_type": "qualys_vulnerability_manager",
      "category": Array [
        "software",
        "other",
      ],
      "createdOn": undefined,
      "description": "Detect, prioritize and remediate vulnerabilities, and monitor using dashboards.",
      "displayName": "Qualys Vulnerability Manager",
      "function": "vulnerability-management",
      "name": "Qualys Vulnerability Manager",
      "updatedOn": undefined,
      "version": "1.0.3",
    },
    Object {
      "_class": Array [
        "Finding",
      ],
      "_key": "c9d59cd1-8d7b-4cd4-8cdc-19cf09d5fd5c",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "uploadStatus": "SKIPPED",
            "uploadStatusReason": "Raw data for detection entities currently disabled",
          },
        },
      ],
      "_type": "qualys_web_app_finding",
      "category": "app-scan",
      "createdOn": 1599696500000,
      "displayName": "Missing header: Referrer-Policy",
      "id": "3158304",
      "lastTestedOn": 1599696500000,
      "name": "Missing header: Referrer-Policy",
      "numericSeverity": 4,
      "open": true,
      "qid": 150208,
      "severity": "low",
      "status": undefined,
      "targets": Array [
        "Ask JupiterOne",
      ],
      "type": "INFORMATION_GATHERED",
      "updatedOn": 1599696500000,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:was",
      "_toEntityKey": "qualys-service:was",
      "_type": "qualys_account_has_web_app_scanner",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "qualys-account:local-integration-instance",
      "_key": "qualys-account:local-integration-instance|has|qualys-service:vmdr",
      "_toEntityKey": "qualys-service:vmdr",
      "_type": "qualys_account_has_vulnerability_manager",
      "displayName": "HAS",
    },
    Object {
      "_class": "SCANS",
      "_key": "qualys-service:was|scans|FORWARD:_type=web_app:name=Ask JupiterOne",
      "_mapping": Object {
        "relationshipDirection": "FORWARD",
        "sourceEntityKey": "qualys-service:was",
        "targetEntity": Object {
          "_class": "Application",
          "_type": "web_app",
          "displayName": "Ask JupiterOne",
          "name": "Ask JupiterOne",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "name",
          ],
        ],
      },
      "_type": "qualys_web_app_scanner_scans_web_app",
      "displayName": "SCANS",
    },
    Object {
      "_class": "IDENTIFIED",
      "_fromEntityKey": "qualys-service:was",
      "_key": "qualys-service:was|identified|c9d59cd1-8d7b-4cd4-8cdc-19cf09d5fd5c",
      "_toEntityKey": "c9d59cd1-8d7b-4cd4-8cdc-19cf09d5fd5c",
      "_type": "qualys_web_app_scanner_identified_finding",
      "displayName": "IDENTIFIED",
    },
    Object {
      "_class": "SCANS",
      "_key": "qualys-service:vmdr|scans|qualys-host:107800671",
      "_mapping": Object {
        "relationshipDirection": "FORWARD",
        "sourceEntityKey": "qualys-service:vmdr",
        "targetEntity": Object {
          "_class": "Host",
          "_key": "arn:aws:ec2:us-east-1:191097756250:instance/i-02751173c463c34e8",
          "_type": "aws_instance",
          "displayName": "i-02751173c463c34e8",
          "fqdn": "ec2-3-236-88-110.compute-1.amazonaws.com",
          "hostname": "ec2-3-236-88-110.compute-1.amazonaws.com",
          "id": "i-02751173c463c34e8",
          "ipAddress": "172.31.66.126",
          "lastScannedOn": undefined,
          "os": "Linux",
          "platform": "linux",
          "privateIpAddress": "172.31.66.126",
          "publicIpAddress": undefined,
          "qualysAssetId": 84047683,
          "qualysHostId": 107800671,
          "scannedBy": "qualys",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "_key",
          ],
        ],
      },
      "_type": "qualys_vulnerability_manager_scans_aws_instance",
      "displayName": "SCANS",
    },
    Object {
      "_class": "IS",
      "_key": "c9d59cd1-8d7b-4cd4-8cdc-19cf09d5fd5c|is|vuln-qid:150208",
      "_mapping": Object {
        "relationshipDirection": "FORWARD",
        "sourceEntityKey": "c9d59cd1-8d7b-4cd4-8cdc-19cf09d5fd5c",
        "targetEntity": Object {
          "_class": "Vulnerability",
          "_key": "vuln-qid:150208",
          "_type": "qualys_vuln",
          "displayName": "Missing header: Referrer-Policy",
          "id": "150208",
          "name": "Missing header: Referrer-Policy",
          "severityLevel": 2,
          "webLink": "https://qualysguard.qg3.apps.qualys.com/fo/common/vuln_info.php?id=150208",
        },
        "targetFilterKeys": Array [
          Array [
            "_type",
            "_key",
          ],
        ],
      },
      "_type": "qualys_web_app_finding_is_vuln",
      "displayName": "IS",
    },
  ],
  "encounteredTypes": Array [
    "qualys_account",
    "qualys_web_app_scanner",
    "qualys_vulnerability_manager",
    "qualys_account_has_web_app_scanner",
    "qualys_account_has_vulnerability_manager",
    "qualys_web_app_scanner_scans_web_app",
    "qualys_web_app_finding",
    "qualys_web_app_scanner_identified_finding",
    "qualys_vulnerability_manager_scans_aws_instance",
    "qualys_web_app_finding_is_vuln",
  ],
  "numCollectedEntities": 4,
  "numCollectedRelationships": 6,
}
`;
